crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_stack_dealloc_token_reify.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: result
---
status: Some(1)
stdout:
FAIL rejects_stack_dealloc_token_reify
  resource assertion failed
  src/main.rs:7:13: 7:18
PASS main
  all assertions discharged

stderr:
