crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_standalone_proof_bad_stmt_anchor.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED target
  standalone proof anchor `at stmt #9` does not exist in `target`
  src/main.rs:11:1: 13:2

stderr:
