crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_symbolic_i32_add_overflow.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL rejects_symbolic_i32_add_overflow
  type invariant does not hold
  src/main.rs:2:14: 2:19
PASS main
  all assertions discharged

stderr:
