crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_top_level_orphan_spec_comment.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED prepass
  spec comment is not attached to a function contract, ghost item, ghost command, or loop invariant: //@ assert true;
  no-location

stderr:
