crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_tuple_projection_on_mut_ref.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED rejects_tuple_projection_on_mut_ref
  tuple field access requires a tuple, found `Mut<i32>`
  src/main.rs:3:5: 3:32
PASS main
  all assertions discharged

stderr:
