crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_unbound_spec_var_use.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED rejects_unbound_spec_var_use
  unresolved binding `X` in //@ assert
  src/main.rs:4:5: 4:16

stderr:
