crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_uninferred_spec_var_type.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED rejects_uninferred_spec_var_type
  could not infer a type for `?X`
  src/main.rs:2:1: 2:17
UNSUPPORTED main
  callee `rejects_uninferred_spec_var_type` has invalid contract: could not infer a type for `?X`
  src/main.rs:2:1: 2:17

stderr:
