crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_uninitialized_points_to_read.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: result
---
status: Some(1)
stdout:
FAIL read_i32
  raw pointer dereference requires an initialized PointsTo resource
  src/main.rs:4:14: 4:16
PASS main
  all assertions discharged

stderr:
