crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_unknown_own_rust_type.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 116
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED rejects_unknown_own_rust_type
  unknown Rust type `Missing` in `Own`
  src/main.rs:2:1: 2:32

stderr:
